--- a/final.css
+++ b/final.css
@@ -9,20 +9,22 @@
 }
 body{
   background-color:#1E1E1E;
-  
   justify-items: center;
   justify-content: center;
 }
 
 header{
   position:relative;
+  text-align: center;
   left: 0;
   top:0;
   width:100%;
-  height: 80px;
+  height: 90px;
   background-color: #535353;
+  
 }
 header h4{
+  text-align: center;
   position:relative;
   text-align: center;
   bottom:-1rem;
@@ -41,6 +43,7 @@ header h4{
   transition: 1s;
 }
 .title{
+  display:flex;
   position: absolute;
   top:40%;
   left:50%;
@@ -48,7 +51,7 @@ header h4{
 }
 .titleSpan{
   position: relative;
-  display:inline-block;
+  display:flex;
   bottom:-20px;
   opacity: 0;
   background-color:#535353;
@@ -116,16 +119,19 @@ header h4{
   padding-top:6rem;
 }
 .grid{
-  max-width: 10rem;
+  max-width: 75%;
   margin: auto; 
   display:grid;
   justify-items:center;
   justify-content:center;
   gap:2rem;
 
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: repeat(auto-fit,480px)
   
 }
+
+
+
 footer{
   background-color:#535353 ;
   position: relative;
