--- a/final.css
+++ b/final.css
@@ -41,14 +41,17 @@ header h4{
   height: 100vh;
   background-color: #535353;
   transition: 1s;
+  text-align: center;
 }
 .title{
+  text-align: center;
   position: absolute;
   top:40%;
   left:50%;
   transform:translate(-50%,-50%)
 }
 .titleSpan{
+  text-align: center;
   position: relative;
   bottom:-20px;
   opacity: 0;
